--- a/wp-content/themes/twentysixteen-child/style.css
+++ b/wp-content/themes/twentysixteen-child/style.css
@@ -8,15 +8,18 @@ Template: twentysixteen
 Version: 0.1.0
 */
 
-
-p {color: red;}
-
 /* Reduce blog post titles */
 
 .entry-title {
     font-size: 1.5rem;
 }
 
+/* Reduce line weight and color of lines */
+
 .widget {
+    border-top: 2px solid #d0d0d0;
+}
+
+.page-header {
     border-top: 2px solid #d0d0d0;
 }
